# citation-guard

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
citation_guard/: __init__.py  cli.py  core.py
openclaude-plugin/: install.md
openclaude-plugin/.claude-plugin/: plugin.json
openclaude-plugin/skills/sci-cite-guard/: SKILL.md
reproduce/: README.md  requirements.txt
reproduce/data/: README.md  bioasq_slice_manifest.json  make_bioasq_slice.py  qasa_calibration_scores.json
reproduce/expected_results/: README.md  summary.json
reproduce/scripts/: 00_setup.sh  01_vllm_boot.sh  02_generate.py  03_guard.py  04_bootstrap.py  05_conformal_sanity.py  _pqa_run.py  reproduce_minimal.sh
tests/: test_smoke.py
